--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
-div{
+div:nth-child(1){
     background-color: darkturquoise;
+    padding:10px;
+    margin: 10px;
+}
+div:nth-child(2){
+    background-color: black;
+    color: aquamarine;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding:10px;
+    margin:10px;
+}
+div:nth-child(3){
+    background-color: crimson;
+    color: white;
+    font-size: 16px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 900;
+    padding:10px;
+    margin:10px;
 }
