--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ div:nth-child(3){
     padding:10px;
     margin:10px;
 }
+ul{
+    background-color: bisque;
+    color:coral;
+    list-style-position: inside;
+    list-style: decimal;
+    margin: 10px;
+}
