--- a/style.css
+++ b/style.css
@@ -27,3 +27,9 @@ ul{
     list-style: decimal;
     margin: 10px;
 }
+.img{
+    height: 400px;
+    width: 400px;
+    background-image: url("/1.avif");
+    background-size: cover;
+}
