--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ ul{
     list-style: decimal;
     margin: 10px;
 }
+h3{
+    color: white;
+    background-color: black;
+}
 .img{
     height: 400px;
     width: 400px;
